[tool.poetry]
name = "pulumi_repro"
version = "0.1.0"
description = ""
authors = ["josh-gree <joshua.greenhalgh@heyjobs.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pulumi = "^3.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
